[package]
name = "lite-job-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "cluster", "json"] }
deadpool = "0.12"
deadpool-redis = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-trait = "0.1"
once_cell = "1.19"
rand = "0.8"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
cluster = ["redis/cluster"]
