[package]
name = "liteq"
version = "1.0.1"
edition = "2021"
description = "High-performance job queue library for Rust using Redis with auto-retry, connection pooling, and multi-consumer fair distribution"
license = "MIT"
repository = "https://github.com/skyapps-id/lite-job"
keywords = ["redis", "queue", "job", "async", "tokio"]
categories = ["asynchronous", "database"]

[dependencies]
redis = { version = "1.1", features = ["aio", "tokio-comp", "connection-manager", "cluster", "json"] }
deadpool = "0.13.0"
deadpool-redis = "0.23.0"
tokio-native-tls = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-trait = "0.1"
once_cell = "1.19"
rand = "0.10"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
cluster = ["redis/cluster"]
